turbine-server/src/main/fabric8/turbine-server-deployment.yml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  labels:
    project: "${project.artifactId}"
    provider: "fabric8"
    version: "${project.version}"
    group: "io.fabric8.kubeflix"
  name: "turbine-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      project: "${project.artifactId}"
      provider: "fabric8"
      group: "io.fabric8.kubeflix"
  template:
    metadata:
      labels:
        project: "${project.artifactId}"
        provider: "fabric8"
        version: "${project.version}"
        group: "io.fabric8.kubeflix"
    spec:
      containers:
      - env:
        - name: "TURBINE_INSTANCEURLSUFFIX"
          value: ":5050/hystrix.stream"
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        image: "fabric8/turbine-server:${project.version}"
        name: "turbine-server"
        ports:
        - containerPort: 8080
          name: "http"
        - containerPort: 8778
          name: "jolokia"
      serviceAccountName: "turbine"
